# POC_arm

./: 100g_load.csv  250g_load.csv  400g_RandPose2.csv  400g_RandomPose.csv  400g_load.csv  Dockerfile  Instructions.txt  README.md  docker-compose.yml  frames_2026-01-22_13.14.41.gv  no_load.csv  start_container.sh
.devcontainer/: devcontainer.json
install/: local_setup.sh  setup.sh
install/my_robot_commander_cpp/lib/my_robot_commander_cpp/: print_current_pose  test_moveit
install/my_robot_commander_cpp/share/my_robot_commander_cpp/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_robot_interfaces/share/my_robot_interfaces/: local_setup.sh  package.sh
install/poc_arm/share/poc_arm/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/poc_moveit_config/share/poc_moveit_config/: .setup_assistant  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/realsense_gazebo/lib/realsense_gazebo/: yolo_world_node.py
install/realsense_gazebo/share/realsense_gazebo/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/waveshare_servos/include/waveshare_servos/: INST.h  SCS.h  SCSCL.h  SCServo.h  SMS_STS.h
install/waveshare_servos/lib/waveshare_servos/: calibrate_midpoint  set_id
install/waveshare_servos/share/waveshare_servos/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/: check_id.py  servo.py
src/my_robot_commander_cpp/: CMakeLists.txt
src/my_robot_commander_cpp/src/: commander_template.cpp  pose_printer.cpp  task_manager.cpp
src/my_robot_interfaces/: CMakeLists.txt
src/poc_arm/: CMakeLists.txt
src/poc_arm/launch/: display.launch.xml  poc_bringup.launch.py
src/poc_arm/meshes/: shoulder_pitch_link.STL  wrist_pitch_link.STL
src/poc_arm/rviz/: urdf_config.rviz
src/poc_arm/urdf/: camera_rgbd.xacro  camera_rgbd_real.xacro  poc_arm.urdf.xacro  poc_arm_real.urdf.xacro  poc_arm_ros2_control_real.xacro  poc_arm_sim.urdf.xacro
src/poc_moveit_config/: CMakeLists.txt
src/poc_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit.rviz  my_robot.ros2_control.xacro  ros2_controllers.yaml  ros2_controllers_gazebo.yaml  test1.world  test2.world
src/poc_moveit_config/launch/: demo.launch.py  gazebo.launch.py  move_group.launch.py  moveit_gazebo.launch.py  rsp.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/poc_v2/: CMakeLists.txt  package.xml
src/poc_v2/config/: ros2_controllers.yaml
src/poc_v2/launch/: gazebo.launch.py  pd_test.py  poc_bringup.launch.py
src/poc_v2/meshes/: elbow_pitch_link.STL  shoulder_base_link.STL  shoulder_pitch_link.STL  shoulder_roll_link.STL  shoulder_yaw_link.STL  wrist_pitch_link.STL  wrist_roll_link.STL  wrist_yaw_link.STL
src/poc_v2/poc_v2/: gravity_comp_node.py  pd_test.py
src/poc_v2/rviz/: urdf_config.rviz
src/poc_v2/urdf/: camera_rgbd.xacro  poc_arm.urdf.xacro  poc_arm_real.urdf.xacro  poc_arm_ros2_control_real.xacro  poc_arm_sim.urdf.xacro  poc_with_gripper.urdf.xacro
src/poc_v2_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/poc_v2_moveit/config/: chomp_planning.yaml  initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  poc_v2.ros2_control.xacro  poc_v2.srdf  poc_v2.urdf.xacro  ros2_controllers.yaml  test2.world
src/poc_v2_moveit/launch/: demo.launch.py  gazebo.launch.py  move_group.launch.py  moveit_gazebo.launch.py  moveit_poc.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/realsense_gazebo/: CMakeLists.txt  package.xml
src/realsense_gazebo/models/camera_bot_rs/: model.config
src/realsense_gazebo/scripts/: base_yolow.py  current_plotter.py  glass_position.py  liquid_level.py  transform.py  yolo_world_node.py
src/realsense_gazebo/urdf/: camera_bot_rs.urdf
src/realsense_gazebo/worlds/install/: setup.ps1  setup.sh  setup.zsh
src/waveshare_servos/: CMakeLists.txt  README.md  waveshare_servos.xml
src/waveshare_servos/bringup/config/: one_motor_controllers.yaml
src/waveshare_servos/bringup/launch/: example.launch.py
src/waveshare_servos/description/ros2_control/: one_motor.ros2_control.xacro
src/waveshare_servos/description/urdf/: example.urdf.xacro  one_motor.urdf.xacro
src/waveshare_servos/include/: SCSerial.h  SMSBL.h  SMSCL.h  visibility_controls.h  waveshare_servos.hpp
src/waveshare_servos/src/: SCS.cpp  SCSCL.cpp  SCSerial.cpp  SMSBL.cpp  SMSCL.cpp  SMS_STS.cpp  calibrate_midpoint.cpp  set_id.cpp  waveshare_servos.cpp
(+55 files in other folders)
